<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">嘿嘿连载</string>
    <string name="app_nomore">没有更多内容了</string>
    <string name="app_sharegold">分享得金币</string>
    <string name="app_noresult">暂无结果～</string>
    <string name="app_update">嘿嘿连载有新版本啦</string>
    <string name="splashactivity_skip"> 跳过 </string>
    <string name="splashactivity_surplus"> 剩余 </string>
    <string name="splashactivity_nonet">当前无网络连接</string>
    <string name="splashactivity_cancle"> 取消 </string>
    <string name="splashactivity_set"> 设置 </string>
    <string name="splashactivity_permissions_t">开启权限</string>
    <string name="splashactivity_permissions_c1">「 </string>
    <string name="splashactivity_permissions_c2"> 」需要开启储存卡使用权限才能正常使用</string>
    <string name="login_permissions_c2"> 」需要开启短信使用权限才能正常使用</string>
    <string name="splashactivity_permissions_set">设置</string>
    <string name="splashactivity_permissions_cancle">取消</string>
    <string name="splashactivity_cannot_link">您所在区域暂时无法打开应用，我们加急处理中。请您稍后再试...</string>
    <string name="firstStartactivity_welcome">你终于来了</string>
    <string name="firstStartactivity_choosesex">现在快选择你的性别吧</string>
    <string name="firstStartactivity_zongyounixihuan">总有你喜欢</string>
    <string name="firstStartactivity_chooseclassfy">请选择你喜欢的书库</string>
    <string name="firstStartactivity_dutedeni">独特的你</string>
    <string name="firstStartactivity_choosebooks">请选择你感兴趣的书籍</string>
    <string name="MainActivity_exit">再按一次退出程序</string>
    <string name="MainActivity_shujia">书架</string>
    <string name="MainActivity_cartoon">动画</string>
    <string name="MainActivity_shuchen">书城</string>
    <string name="MainActivity_faxian">发现</string>
    <string name="MainActivity_my">我的</string>
    <string name="MainActivity_boyin">有声</string>
    <string name="Discover_end">活动已结束</string>
    <string name="MainActivity_holdon">官网下载</string>
    <string name="MainActivity_nowupdate">立即升级</string>
    <string name="MainActivity_pay_complete">您的支付订单已处理哦~</string>
    <string name="noverfragment_xiaoshuo">小说</string>
    <string name="noverfragment_manhua">漫画</string>
    <string name="ReadHistoryFragment_shangchu">删除</string>
    <string name="ReadHistoryFragment_yishanchus">已删除%s话</string>
    <string name="ReadHistoryFragment_qurenshanchu">确认删除</string>
    <string name="noverfragment_sign">签到</string>
    <string name="noverfragment_allchoose">全选</string>
    <string name="noverfragment_yuedulishi">阅读历史</string>
    <string name="noverfragment_shanchushuji2">删除(%d)</string>
    <string name="noverfragment_goonread">继续阅读</string>
    <string name="noverfragment_nobooks">您还没有添加过一部小说到书架</string>
    <string name="noverfragment_nocomics">您还没有添加过一部漫画到书架</string>
    <string name="noverfragment_nobooks2">不妨去追一部小说吧～</string>
    <string name="noverfragment_nocomic2">不妨去追一部漫画吧～</string>
    <string name="noverfragment_gostore">去书城逛逛</string>
    <string name="noverfragment_gostore_comic">去「漫画」看看</string>
    <string name="noverfragment_gostore_book">去「小说」看看</string>
    <string name="AnnounceActivity_title">公告</string>
    <string name="ReadHistoryFragment_loginlook">登录后查看阅读历史</string>
    <string name="ReadHistoryFragment_gologin">去登录</string>
    <string name="ReadHistoryFragment_total_chapter">更新至第%s章</string>
    <string name="comicinfo_total_chapter">更新至第%d话</string>
    <string name="ReadHistoryFragment_noread">还未阅读任何书籍</string>
    <string name="storeFragment_more">更多</string>
    <string name="storeFragment_huanyihuan">换一换</string>
    <string name="storeFragment_boy">男生</string>
    <string name="storeFragment_gril">女生</string>
    <string name="storeFragment_fenlei">分类</string>
    <string name="storeFragment_paihang">榜单</string>
    <string name="storeFragment_baoyue">会员</string>
    <string name="storeFragment_wanben">完结</string>
    <string name="storeFragment_xianmian">推荐</string>
    <string name="storeFragment_lookmore">查看更多</string>
    <string name="public_sure">确定</string>
    <string name="public_close">返回</string>
    <string name="app_version">当前版本:</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉载入更多</string>
    <string name="release_to_load">释放立即载入</string>
    <string name="loading">正在载入...</string>
    <string name="load_succeed">载入成功</string>
    <string name="load_fail">加载失败</string>
    <string name="no_load">暂无更多数据</string>
    <string name="home_store_edit_data">小编推荐了几本新书，来看看吧！</string>
    <string name="home_store_edit_data_refresh">新推荐书籍加载完毕，快去看看吧!</string>
    <string name="user_login">登录 / 注册</string>
    <string name="MineNewFragment_chongzhi">%s充值</string>
    <string name="MineNewFragment_song">送%s</string>
    <string name="MineNewFragment_kaitongVIP">我的VIP</string>
    <string name="MineNewFragment_shuping">我的评论</string>
    <string name="MineNewFragment_share">我要分享</string>
    <string name="MineNewFragment_read">阅读领奖</string>
    <string name="MineNewFragment_friend">分享好友</string>
    <string name="MineNewFragment_fankui">意见反馈</string>
    <string name="MineNewFragment_lianxikefu">联系客服</string>
    <string name="MineNewFragment_set">设置</string>
    <string name="MineNewFragment_fuli">福利任务</string>
    <string name="MineNewFragment_nologin">未登录</string>
    <string name="MineNewFragment_nologin_prompt">登录后才可以购买VIP哦~</string>
    <string name="MineNewFragment_nologin_prompt_gold">登录后才可以购买金币哦~</string>
    <string name="share_detail">分享记录</string>
    <string name="share_no_result">你还没有任何分享哦</string>
    <string name="golden_balance">余额：%d</string>
    <string name="golden_recharge_balance">充值金币</string>
    <string name="become_vip">成为会员</string>
    <string name="become_vip_tip">畅听畅读，精品抢先</string>
    <string name="SettingsActivity_nomark">在手机上没有找到应用市场哦！</string>
    <string name="SettingsActivity_clear">清除缓存</string>
    <string name="SettingsActivity_clearSeccess">清除缓存成功</string>
    <string name="SettingsActivity_market">好评支持</string>
    <string name="SettingsActivity_friend">推荐给朋友</string>
    <string name="SettingsActivity_language">语言切换</string>
    <string name="SettingsActivity_version">版本检测</string>
    <string name="SettingsActivity_version_new">发现新版本</string>
    <string name="SettingsActivity_version_now">您的版本已是最新！</string>
    <string name="SettingsActivity_v">V</string>
    <string name="SettingsActivity_adout">关于</string>
    <string name="SettingsActivity_tongbu">使用3G/4G同步书架</string>
    <string name="SettingsActivity_antobuy">自动购买下一章</string>
    <string name="SettingsActivity_exit">退出登录</string>
    <string name="SettingsActivity_zhcn">简体中文</string>
    <string name="SettingsActivity_zhhk">繁体中文</string>
    <string name="SettingsActivity_EN">English</string>
    <string name="SettingsActivity_cleanhuancun">是否清除缓存信息</string>
    <string name="SettingsActivity_updatename">修改昵称</string>
    <string name="SettingsActivity_password">修改密码</string>
    <string name="dialog_lookcomicset_fanye_text1">点击翻页</string>
    <string name="dialog_lookcomicset_fanye_text2">打开后可点击屏幕上下方翻页</string>
    <string name="dialog_lookcomicset_fanye_yejian">夜间模式</string>
    <string name="AboutActivity_title">软件许可及服务协议</string>
    <string name="AboutActivity_title2">关于我们</string>
    <string name="AboutActivity_Email">已复制Email到剪贴板</string>
    <string name="AboutActivity_QQ">已复制QQ到剪贴板</string>
    <string name="AboutActivity_weixin2">已复制微信号到剪贴板</string>
    <string name="AboutActivity_telephone">已复制电话号码到剪贴板</string>
    <string name="AboutActivity_xieyi">使用者协议</string>
    <string name="AboutActivity_phone">客服电话</string>
    <string name="AboutActivity_Email2">Email</string>
    <string name="AboutActivity_QQ2">QQ</string>
    <string name="UserInfoActivity_title">个人资料</string>
    <string name="UserInfoActivity_weizhi">未知</string>
    <string name="UserInfoActivity_boy">男</string>
    <string name="UserInfoActivity_gril">女</string>
    <string name="UserInfoActivity_namenonull">昵称不能为空</string>
    <string name="UserInfoActivity_bangdingyes">绑定成功</string>
    <string name="UserInfoActivity_touxiang">头像</string>
    <string name="UserInfoActivity_nicheng">用户名</string>
    <string name="UserInfoActivity_password">密码</string>
    <string name="UserInfoActivity_sex">性别</string>
    <string name="UserInfoActivity_phone">手机号</string>
    <string name="UserInfoActivity_weixin">微信</string>
    <string name="FeedBackActivity_title">意见回馈</string>
    <string name="FeedBackActivity_tijiao">提交</string>
    <string name="FeedBackActivity_some">写点什么吧</string>
    <string name="FeedBackActivity_some1">请上传图片哦</string>
    <string name="FeedBackActivity_some2">请选择反馈类型哦</string>
    <string name="FeedBackActivity_sub_type">%s必填内容，请填写！</string>
    <string name="FeedBackActivity_des">请详细描述您遇到的问题并告知具体操作步骤，我们会尽快答复您的问题哦～</string>
    <string name="FeedBackActivity_success">反馈成功</string>
    <string name="MineCommentListActivity_title">我的评论</string>
    <string name="ShareActivity_title">我的分享</string>
    <string name="ShareActivity_save_qr_code">保存二维码</string>
    <string name="ShareActivity_qr_code_file_name">heiheilianzai_share.jpg</string>
    <string name="pic_name">acount.jpg</string>
    <string name="ShareActivity_save_qr_toast">已保存二维码到相册</string>
    <string name="ShareActivity_save">分享</string>
    <string name="ShareActivity_save_toast">已保存分享地址到粘贴板</string>
    <string name="save_or_share_pic">保存图片分享</string>
    <string name="copy_or_share_link">复制分享链接</string>
    <string name="share_rule1">分享规则</string>
    <string name="share_rule2">作品简介打开应用提示已损坏是因为新系统的原</string>
    <string name="share_rule3">因。新的系统为了加…</string>
    <string name="share_code">邀请码</string>
    <string name="share_friend">已成功邀请%s位好友</string>
    <string name="share_friend2">已成功邀请%s位好友,已达上限</string>
    <string name="share_success">分享成功</string>
    <string name="save_default">图片保存失败</string>
    <string name="save_success">图片保存成功</string>
    <string name="SearchActivity_hotsearch">热门搜索</string>
    <string name="SearchActivity_hotrank">热搜榜</string>
    <string name="liushuijilu_title">流水记录</string>
    <string name="BaoyueActivity_title">会员中心</string>
    <string name="BaoyueActivity_kaitong">立即开通</string>
    <string name="BaoyueActivity_yikaitong">续费充值</string>
    <string name="BaoyueActivity_nologin">用户/昵称</string>
    <string name="BaoyueActivity_no_login">未登录</string>
    <string name="BaoyueActivity_mianfei"><font color='#989898'>您还</font>未开通会员</string>
    <string name="BaoyueActivity_baoyueshuku">会员书库</string>
    <string name="BaoyueActivity_baoyueshuku2">开通会员免费读</string>
    <string name="ReadActivity_wu">无</string>
    <string name="select_all">全选</string>
    <string name="vip_error">支付失败，请重试</string>
    <string name="dialog_vip_comfirm_tittle">充值确认中...</string>
    <string name="string_dialog_comfirm_tip">若在30分钟内未到账，请联系客服查询</string>
    <string name="string_yes">好的</string>
    <string name="string_registe_fast">快速注册</string>
    <string name="string_register_fast">一键注册</string>
    <string name="string_registe_have">我有账号</string>
    <string name="string_registe_login">立即登陆</string>
    <string name="string_read_time_fivty">15分钟</string>
    <string name="string_read_time_half">30分钟</string>
    <string name="string_read_time_sixty">60分钟</string>
    <string name="read_activity_exit_listen">退出听书模式</string>
    <string name="read_activity_listen_timer">定时</string>
    <string name="read_activity_listen_yingse">音色</string>
    <string name="read_activity_listen_gao">高</string>
    <string name="read_activity_listen_di">低</string>
    <string name="read_activity_listen_shengdiao">声调</string>
    <string name="read_activity_listen_kuai">快</string>
    <string name="read_activity_listen_man">慢</string>
    <string name="read_activity_listen_speed">速度</string>
</resources>