<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_vitualkey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.heiheilianzai.app.activity.MainActivity">

    <com.heiheilianzai.app.view.CustomScrollViewPager
        android:id="@+id/fragment_home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp" />

    <LinearLayout
        android:id="@+id/main_menu_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/navigation_bg"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/navigation_bg_border_up" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/navigation_bg_border_down" />

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/home_novel_layout"
                style="@style/home_menu_style"
                android:layout_height="58dp"
                android:text="@string/MainActivity_shujia" />

            <RadioButton
                android:id="@+id/home_store_layout"
                style="@style/home_menu_style"
                android:layout_height="58dp"
                android:checked="true"
                android:text="@string/noverfragment_xiaoshuo" />

            <RadioButton
                android:id="@+id/home_store_layout_comic"
                style="@style/home_menu_style"
                android:layout_height="58dp"
                android:text="@string/noverfragment_manhua" />

            <RadioButton
                android:id="@+id/home_discovery_layout"
                style="@style/home_menu_style"
                android:layout_height="58dp"
                android:text="@string/MainActivity_faxian" />

            <RadioButton
                android:id="@+id/home_mine_layout"
                style="@style/home_menu_style"
                android:layout_height="58dp"
                android:drawableTop="@drawable/selector_home_mine"
                android:text="@string/MainActivity_my" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/shelf_book_delete_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/fragment_novel_allchoose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/select_all"
            android:textColor="@color/black"
            android:textSize="@dimen/public_14_dp" />

        <TextView
            android:id="@+id/shelf_book_delete_del"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:gravity="center"
            android:text="@string/ReadHistoryFragment_shangchu"
            android:textColor="@color/white"
            android:textSize="@dimen/public_14_dp" />

        <TextView
            android:id="@+id/fragment_novel_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/splashactivity_cancle"
            android:textColor="@color/black"
            android:textSize="@dimen/public_14_dp" />
    </LinearLayout>
</RelativeLayout>
