<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:background="@drawable/shape_ffffff_20"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dimens_35dp"
        android:paddingTop="@dimen/dimens_50dp"
        android:paddingRight="@dimen/dimens_35dp"
        android:paddingBottom="@dimen/dimens_45dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_registe_fast"
            android:textColor="@color/color_35363b"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_25dp"
            android:background="@null"
            android:lines="1"
            android:textColor="@color/color_929292"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/dimens_5dp"
            android:background="@color/color_f3f3f3" />

        <TextView
            android:id="@+id/tx_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginTop="@dimen/dimens_30dp"
            android:background="@drawable/shape_e6e6e6_20"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/string_register_fast"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimens_20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_registe_have"
                android:textColor="@color/color_323334"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tx_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/string_registe_login"
                android:textColor="@color/color_196cf2"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>