<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_dingshi_01"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@drawable/rb_bg_dingshi_selector"
            android:checked="true"
            android:gravity="center"
            android:padding="@dimen/dimens_2dp"
            android:text="@string/ReadActivity_wu"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_18sp" />

        <RadioButton
            android:id="@+id/rb_dingshi_02"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@drawable/rb_bg_dingshi_selector"
            android:checked="false"
            android:gravity="center"
            android:padding="@dimen/dimens_2dp"
            android:text="@string/string_read_time_fivty"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_18sp" />

        <RadioButton
            android:id="@+id/rb_dingshi_03"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@drawable/rb_bg_dingshi_selector"
            android:checked="false"
            android:gravity="center"
            android:padding="@dimen/dimens_2dp"
            android:text="@string/string_read_time_half"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_18sp" />

        <RadioButton
            android:id="@+id/rb_dingshi_04"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@null"
            android:button="@drawable/rb_bg_dingshi_selector"
            android:checked="false"
            android:gravity="center"
            android:padding="@dimen/dimens_2dp"
            android:text="@string/string_read_time_sixty"
            android:textColor="@color/black"
            android:textSize="@dimen/dimens_18sp" />

    </RadioGroup>

</LinearLayout>