<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/transparent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/channel_bar_male_text"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/storeFragment_boy"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/channel_bar_female_text"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/storeFragment_gril"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/channel_bar_yousheng_text"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/MainActivity_boyin"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="gone" />
    </LinearLayout>

    <com.heiheilianzai.app.view.UnderlinePageIndicatorHalf
        android:id="@+id/channel_bar_indicator"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="3dp"
        app:selectedColor="@color/mainColor" />
</LinearLayout>